--- a/Base project/MyGame/MyGame/MyGame.vcxproj
+++ b/Base project/MyGame/MyGame/MyGame.vcxproj
@@ -87,7 +87,15 @@
     <ClCompile Include="Engine\GameObject.cpp" />
     <ClCompile Include="Engine\Scene.cpp" />
     <ClCompile Include="GameScene.cpp" />
+    <ClCompile Include="Laser.cpp" />
+    <ClCompile Include="Meteor.cpp" />
     <ClCompile Include="MyGame.cpp" />
+    <ClCompile Include="Ship.cpp" />
+    <ClCompile Include="MeteorSpawner.cpp" />
+    <ClCompile Include="Explosion.cpp" />
+    <ClCompile Include="Score.cpp" />
+    <ClCompile Include="GameOverMessage.cpp" />
+    <ClCompile Include="GameOverScene.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\AnimatedSprite.h" />
@@ -96,13 +104,28 @@
     <ClInclude Include="Engine\GameObject.h" />
     <ClInclude Include="Engine\Scene.h" />
     <ClInclude Include="GameScene.h" />
+    <ClInclude Include="Explosion.h" />
+    <ClInclude Include="GameOverMessage.h" />
+    <ClInclude Include="GameOverScene.h" />
+    <ClInclude Include="Score.h" />
+    <ClInclude Include="MeteorSpawner.h" />
+    <ClInclude Include="Laser.h" />
+    <ClInclude Include="meteor.h" />
     <ClInclude Include="Ship.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\README.md" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="..\..\..\Art\explosion-spritesheet.png" />
+    <Image Include="Resources\laser.png" />
     <Image Include="Resources\ship.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Media Include="Resources\boom.wav" />
+  </ItemGroup>
+  <ItemGroup>
+    <Font Include="Resources\Courneuf-Regular.ttf" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
